<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="1000dp"
        android:layout_height="1500dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imgView1"
        android:scaleType="centerCrop"
        android:src="@drawable/signup" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textViewNameSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNameSignUp"
            android:textColor="#F3F1F1"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ECE7E7"
            android:textColorLink="#FFFDFD"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055" />

        <EditText
            android:id="@+id/txtUsernameSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtUsername"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#F3F1F1"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ECE7E7"
            android:textColorLink="#FFFDFD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.124"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.096"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textViewAgeSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewAgeSignUp"
            android:textColor="#F3F1F1"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ECE7E7"
            android:textColorLink="#FFFDFD"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUsernameSignUp"
            app:layout_constraintVertical_bias="0.043" />

        <EditText
            android:id="@+id/txtAgeSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtAgeSignUp"
            android:inputType="number"
            android:textColor="#F3F1F1"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ECE7E7"
            android:textColorLink="#FFFDFD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.124"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUsernameSignUp"
            app:layout_constraintVertical_bias="0.092"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textViewHeightSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewHeightSignUp"
            android:textColor="#F3F1F1"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ECE7E7"
            android:textColorLink="#FFFDFD"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAgeSignUp"
            app:layout_constraintVertical_bias="0.056" />

        <EditText
            android:id="@+id/txtHeightSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtHeightSignUp"
            android:inputType="number"
            android:textColor="#F3F1F1"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ECE7E7"
            android:textColorLink="#FFFDFD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.124"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAgeSignUp"
            app:layout_constraintVertical_bias="0.115"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textViewWeightSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewWeightSignUp"
            android:textColor="#F3F1F1"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ECE7E7"
            android:textColorLink="#FFFDFD"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHeightSignUp"
            app:layout_constraintVertical_bias="0.063" />

        <EditText
            android:id="@+id/txtWeightSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtWeightSignUp"
            android:inputType="number"
            android:textColor="#F3F1F1"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ECE7E7"
            android:textColorLink="#FFFDFD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.124"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHeightSignUp"
            app:layout_constraintVertical_bias="0.138"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textViewPasswordSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewPasswordSignUp"
            android:textColor="#F3F1F1"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ECE7E7"
            android:textColorLink="#FFFDFD"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWeightSignUp"
            app:layout_constraintVertical_bias="0.077" />

        <EditText
            android:id="@+id/txtPasswordSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FBFBFB"
            android:textColorHint="#FAFBFBFB"
            android:textColorLink="#FDFBFB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.124"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUsernameSignUp"
            app:layout_constraintVertical_bias="0.6"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:backgroundTint="#61E39A73"
            android:text="@string/Btnsignup"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordSignUp"
            app:layout_constraintVertical_bias="0.396" />

        <TextView
            android:id="@+id/txtViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/txtsignUp"
            android:textAlignment="gravity"
            android:textColor="#F6E7E7"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#ECE7E7"
            android:textColorLink="#FFFDFD"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.398"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>