<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:gravity="top"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <ImageView
            android:id="@+id/profilePicViewId"
            android:layout_width="142dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/profilepic" />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintProfileLayoutId"
            android:layout_width="441dp"
            android:layout_height="330dp">

            <TextView
                android:id="@+id/progressCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progresscount"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/progressBarId"
                app:layout_constraintEnd_toEndOf="@+id/progressBarId"
                app:layout_constraintStart_toStartOf="@+id/progressBarId"
                app:layout_constraintTop_toTopOf="@+id/progressBarId" />

            <ProgressBar
                android:id="@+id/progressBarId"
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:indeterminateOnly="false"
                android:progressDrawable="@drawable/progressbar"
                app:layout_constraintBottom_toTopOf="@+id/textViewHealthyDayId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:progress="60" />

            <TextView
                android:id="@+id/textViewHealthyDayId"
                android:layout_width="267dp"
                android:layout_height="32dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/HealthyDay"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSleephrId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Slept8hours"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnExerciseId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Exercise"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnMeditationId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Meditation"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnNoJunkId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NoJunk"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>